# hello-c

./: .appveyor.yml  .gitignore  .travis.yml  README.md  appveyor.bat  appveyor.yml  hello.c  localtest.bat  meson.build
compilers/: linux-arm-gcc-32.txt  linux-arm-gcc-64.txt  linux-gcc-32.txt  linux-gcc-64.txt  osx-clang-32.txt  osx-clang-64.txt
subprojects/bin2c/: meson.build
